Thu Nov 25 10:12:40 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/tests/Derived/DDS_Derived_Connector_T.h:
        * connectors/dds4ccm/tests/DoubleNestedModule/Connector/DNM_Connector.idl:
        * connectors/dds4ccm/tests/FixedSizeStruct/EventConnector/Connector/FSS_Event_Connector.idl:
        * connectors/dds4ccm/tests/FixedSizeStruct/StateConnector/Connector/FSS_State_Connector.idl:
        * connectors/dds4ccm/tests/OneFile/Multiple/OFM_Connector.idl:
        * connectors/dds4ccm/tests/OneFile/Single/OneFile_Connector.idl:
        * connectors/dds4ccm/tests/TwoTopics/Connector/TwoTopics_Connector.idl:
          Removed unneeded pragma's, fixed problems

Thu Nov 25 08:59:45 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/impl/ndds/DataReader_T.cpp:
        * connectors/dds4ccm/impl/ndds/convertors/SampleInfo.h:
        * connectors/dds4ccm/impl/ndds/convertors/SampleInfoSeq.h:
          Removed unneccasary streaming operators.

Thu Nov 25 08:19:39 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * NEWS:
          Removed unnecessary text.

        * connectors/dds4ccm/impl/DDS_Base_Connector_T.h:
        * connectors/dds4ccm/impl/DDS_Base_Connector_T.cpp:
        * connectors/dds4ccm/impl/DDS_TopicBase_Connector_T.h:
        * connectors/dds4ccm/impl/DDS_TopicBase_Connector_T.cpp:
        * connectors/dds4ccm/tests/MultiTopic/Connector/MultiTopic_Connector_T.cpp:
          Moved all helper methods from TopicBase to Base. That way, an user
          can also derive his/her classes from Base.

Wed Nov 24 15:17:55 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/impl/DDS_Subscriber_Base_T.cpp:
        * connectors/dds4ccm/impl/DDS_TopicBase_Connector_T.h:
        * connectors/dds4ccm/impl/DDS_TopicBase_Connector_T.cpp:
          Rewritter init, activate, passivate and remove methods. They should
          be re-usable in the derived classes.
